--- a/app/views/maps/management.html.erb
+++ b/app/views/maps/management.html.erb
@@ -1,6 +1,5 @@
 ﻿<html>
 <head>
-<meta http-equiv="content-language" content="ja">
 <title>登録管理</title>
 
 <style type="text/css">  
@@ -142,7 +141,7 @@
   }
   
   function show(id){
-    window.open("<%= @servername%>/maps/show?id=" + id);
+    window.open("<%= @servername%>/client/show?id=" + id);
   }
   
   function del(id){
