--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -1,8 +1,6 @@
-﻿<!DOCTYPE html>
-<html>
+﻿<html>
 <head>
 <title>物件のご紹介</title>
-<meta http-equiv="content-language" content="ja">
 <style type="text/css">
   @import url(<%= @servername.html_safe %>/assets/jquery-ui-custom.min.css);
   @import url(<%= @servername.html_safe %>/assets/template.css);
