--- a/app/views/maps/add.html.erb
+++ b/app/views/maps/add.html.erb
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<title>物件登録</title>
+<title>物件の追加</title>
 <style type="text/css">
   @import url(<%= @servername.html_safe %>/assets/jquery-ui-custom.min.css);
   @import url(<%= @servername.html_safe %>/assets/template.css);
@@ -164,7 +164,6 @@
     vertical-align: middle;
   }
   
-  
   #propTable {
   	width: 960px;
   	margin-top: 4px;
@@ -195,6 +194,7 @@
   .nameCol {
     width: 300px;
   }
+  
 </style>
 
 <script src="http://maps.google.com/maps/api/js?v=3&sensor=false"
@@ -204,47 +204,72 @@
 
 var map;
 var geo;
-var list = new Array();
 var currentCenter;
 var letterList = ["A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z"];
-var count = 0;
+var json = JSON.parse('<%= @json.html_safe %>');
+var title = json.title;
+var placeArray = json.data;
 
 // 初期化。bodyのonloadでinit()を指定することで呼び出してます
 function init() {
+  var zoom = json.zoom;
+  var center = json.center;
 
-  // Google Mapで利用する初期設定用の変数
-  var latlng = new google.maps.LatLng(39, 138);
+  // Google Mapの表示系
+  var latlng = new google.maps.LatLng(center[0], center[1]);
   var opts = {
-    zoom: 16, //ズーム調整 **************
+    zoom: zoom,
     mapTypeId: google.maps.MapTypeId.ROADMAP,
     center: latlng
   };
-
-  // getElementById("map")の"map"は、body内の<div id="map">より
   map = new google.maps.Map(document.getElementById("map"), opts);
-
-  // ジオコードリクエストを送信するGeocoderの作成
   geo = new google.maps.Geocoder();
-
-  // GeocoderRequest
-  var req = {
-    address: "東京都渋谷区道玄坂２－１８－１１　サンモール道玄坂",
-  };
-  geo.geocode(req, initCallback);
+  
+  $("#titleBox").val(title);
+  
+  //データの挿入
+  for(var itr = 0; itr < placeArray.length; itr = itr + 1){
+  	var req = {
+  	 	address: placeArray[itr].address,
+  	};
+  	geo.geocode(req, putMarkerCallback(itr));
+  	
+  	addRowToTable(itr);
+  }
+  
+  $("#symbol").text(letterList[placeArray.length]);
 }
 
-/*******************************/
-function initCallback(result, status) {
-  if (status != google.maps.GeocoderStatus.OK) {
-    alert(status);
-    return;
-  }
+function addRowToTable(itr){
+	//隔行塗りつぶし
+  	var color = {"background-color":"#FFEEDD"}
+  	if(itr % 2 == 0){
+  	  color = {"background-color":"#FFFFFF"}
+  	}
+	var comment = placeArray[itr].comment;
+  	if(comment == ""){
+  	  comment = "－";
+  	}
+	$("#propTable")
+	    .append($("<tr/>")
+	        .append($("<td class='posCol' rowspan='2'/>").css(color).css({"text-align":"center"}).text(letterList[itr]))
+	        .append($("<td class='nameCol'/>").css(color).text(placeArray[itr].name))
+	        .append($("<td class='addressCol'/>").css(color).text(placeArray[itr].address)))
+	    .append($("<tr/>")
+	        .append($("<td colspan='2'/>").css(color).css({"color":"#000044"}).text(comment)));
+}
 
-  var latlng = result[0].geometry.location;
-  map.setCenter(latlng);
-  var msg = "ファイブリング株式会社";
-  var marker = new google.maps.Marker({position:latlng, map:map, title:msg, icon:"<%= @servername.html_safe %>/assets/comp_logo.png"});
-  attachMessage(marker, msg);
+function putMarkerCallback(nowItr){
+  return function(result, status) {
+    if (status != google.maps.GeocoderStatus.OK) {
+      alert(status);
+      return;
+    }
+
+    var latlng = result[0].geometry.location;
+    var marker = new google.maps.Marker({position:latlng, map:map, icon:"<%= @servername.html_safe %>/assets/comp_logo_" + letterList[nowItr] + ".png"});
+    attachMessage(marker, placeArray[nowItr].name);
+  }
 }
 
 /*******************************/
@@ -254,17 +279,16 @@ function myResultCallback(result, status) {
     return;
   }
 
-  count = count + 1;
   //リストにクエリを保存
   var address = $("#addressBox").val();
   var name = $("#nameBox").val();
   var comment = $("#commentBox").val();
-  list.push({address:address, name:name, comment:comment});
-  addRowToTable(list.length - 1);
+  placeArray.push({address:address, name:name, comment:comment});
+  addRowToTable(placeArray.length - 1);
 
   var latlng = result[0].geometry.location;
   
-  var msg = letterList[count - 1];
+  var msg = letterList[placeArray.length - 1];
   var name = $('#nameBox').val();
   var marker = new google.maps.Marker({position:latlng, map:map, title:msg, icon:"<%= @servername.html_safe %>/assets/comp_logo_" + msg + ".png"});
   //中心座標の計算
@@ -277,7 +301,7 @@ function myResultCallback(result, status) {
   map.setCenter(currentCenter);
 
   attachMessage(marker, name);
-  $("#symbol").text(letterList[count]);
+  $("#symbol").text(letterList[placeArray.length - 1]);
   $("#addressBox").val("");
   $("#nameBox").val("");
   $("#commentBox").val("");
@@ -292,25 +316,6 @@ function attachMessage(marker, msg) {
 	google.maps.event.addListener(marker, 'click', function(event) {
 		infowin.open(marker.getMap(), marker);
 	});
-}
-
-function addRowToTable(itr){
-	//隔行塗りつぶし
-  	var color = {"background-color":"#FFEEDD"}
-  	if(itr % 2 == 0){
-  	  color = {"background-color":"#FFFFFF"}
-  	}
-	var comment = list[itr].comment;
-  	if(comment == ""){
-  	  comment = "－";
-  	}
-	$("#propTable")
-	    .append($("<tr/>")
-	        .append($("<td class='posCol' rowspan='2'/>").css(color).css({"text-align":"center"}).text(letterList[itr]))
-	        .append($("<td class='nameCol'/>").css(color).text(list[itr].name))
-	        .append($("<td class='addressCol'/>").css(color).text(list[itr].address)))
-	    .append($("<tr/>")
-	        .append($("<td colspan='2'/>").css(color).css({"color":"#000044"}).text(comment)));
 }
 
 function renew(){
@@ -328,8 +333,8 @@ function renew(){
 function show(){
   var url = "http://maps.googleapis.com/maps/api/staticmap?";
   var markers = new Array();
-  for(i = 0; i < list.length; i = i + 1){
-    var elem = {markers: "label:" + letterList[i] + "|" + list[i].address};
+  for(i = 0; i < placeArray.length; i = i + 1){
+    var elem = {markers: "label:" + letterList[i] + "|" + placeArray[i].address};
     var buf = $.param(elem);
 	markers.push(buf);
   }
@@ -353,7 +358,7 @@ function hide(){
 
 //submit処理
 function save(){
-  if(list.length == 0){
+  if(placeArray.length == 0){
     alert("なにも登録されていません。あなたはクズです。");
   	return;
   }
@@ -367,12 +372,23 @@ function save(){
   var pos = map.getCenter();
   var center = [pos.lat(),pos.lng()];
   
-  dat = {
-  	data:JSON.stringify(list),
-  	title:title,
-  	center:JSON.stringify(center),
-  	zoom:zoom,
-    }
+  var dat;
+  if(title == $("#titleBox").val()){
+	  dat = {
+	  	data:JSON.stringify(placeArray),
+	  	title:title,
+	  	center:JSON.stringify(center),
+	  	zoom:zoom,
+	  	id:"<%= params[:id] %>",
+	    }
+  }else{
+	  dat = {
+	  	data:JSON.stringify(placeArray),
+	  	title:title,
+	  	center:JSON.stringify(center),
+	  	zoom:zoom,
+	    }
+  }
   
   $.ajax({
     url: "<%= @servername %>/maps/commit",
@@ -441,7 +457,7 @@ $(window).bind("load",function(){
 				<td>
 					<img src="<%= @servername.html_safe %>/assets/comp_logo.jpg" id="comp_logo" width="30px">
 				</td><td>
-					物件の登録
+					物件の追加
 				</td>
 			</tr>
 		</table>
