--- a/app/views/maps/auth_page.html.erb
+++ b/app/views/maps/auth_page.html.erb
@@ -41,6 +41,11 @@ $("#showButton").keypress(function(ev) {
 		auth();
 	}
 });
+$("#pwBox").keypress(function(ev) {
+	if ((ev.which && ev.which === 13) || (ev.keyCode && ev.keyCode === 13)) {
+		auth();
+	}
+});
 </script>
 
 </head>
